# Learning_building_simple_PyTorch_project

./: CLAUDE.md  README.md  example_runs.py  globals.py  p1_data_source.py  p2_model.py  p3_trainig.py  p4_test_model.py  pyproject.toml
